# SimpleMatchingEngine

./: CMakeLists.txt  README.md  matching_engine
src/: amount.cpp  amount.hpp  avlTree.cpp  avlTree.hpp  book.hpp  main.cpp  matchingEngine.cpp  matchingEngine.hpp  myOrder.hpp  order.cpp  order.hpp
